# chat

./: .gitignore  Dockerfile  GPTguide.md  README.md  function_app.py  functionapp2.py  pyproject.toml  requirements.txt  test.db  test_app.py
app/: pyvenv.cfg
src/faas_demo/: app.py  main.py  test.db  utils.py
src/faas_demo/model/: auth.py  database.py  models.py  response.py  schemas.py  security.py
src/faas_demo/prompt_engine/: prompt.py
tests/faas_demo/: test_chat_api.py  test_main.py  urltest.py
tests/faas_demo/test_model/: test_auth.py
