[project]
name = "faas-demo"
version = "0.1.0"
description = "Function as a Service demo using Azure Functions"
authors = [
    {name = "Rishabh Chakrabarti", email = "rishabh.chakrabarti@happiestminds.com"},
]
dependencies = [
    "langchain>=0.0.329",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
